styles/mobile.scss
/* ... */
.topbar.topbar-mobile {
    width: 100%;
    left: 0;
    padding-left: 0px;

    > div > div > .nav-icons {
        display: none;
    }

    > div > div > div.col-auto.pr-5.ml-auto.my-auto.icons-bar.d-flex {
        margin-right: 0px;
        padding-right: 0 !important;
        > div > div > div {
            margin-right: 15px;
        }
    }
}

.main-container-mobile.route-in {
    position: fixed;
}

.main-container-mobile.route-out {
    position: fixed;
}

@media only screen and (max-width: 768px) {
    .sidebar.sidebar-mobile {
        display: block;
    }

    .topbar.topbar-mobile {
        display: flex;
    }

    .main-container-mobile > div > .song-container {
        display: block;
        padding-right: 0;

        > .page-title {
            display: none;
        }

        > .compact-container {
            padding-top: 0px;
        }

        // Song details
        > div {
            /* display: grid !important; */
            flex-direction: column;
            flex-wrap: nowrap !important;
            overflow: scroll;
            > .song-details-container {
                display: none;
            }

            > .song-list-compact {
                flex: 1 1 auto !important;

                #scroller > .song-details {
                    display: flex;
                    flex-direction: column;
                    align-items: center;

                    > .row.no-gutters.flex-fill.mt-2 {
                        margin-left: 30px;
                    }

                    > .row.no-gutters > .col.position-relative {
                        display: flex;
                        flex-direction: column;
                        align-items: center;
                    }

                    .image-container {
                        height: 250px;
                        width: 250px !important;

                        img,
                        svg {
                            display: block;
                        }
                    }

                    .button-group {
                        margin-top: 15px;
                        margin-bottom: 15px;
                    }

                    .song-info-container {
                        text-align: center;
                        position: relative;
                    }

                    .song-timestamp-details {
                        display: none;
                    }
                }
            }
        }
    }

    .mini-player {
        display: none;
    }

    .musicinfo-mobile-view-container {
        .song-info-container {
            display: flex;
        }
    }
}

.musicinfo-mobile-cover {
    width: 300px;
    height: 300px;

    > .image-container > div > div > img {
        display: block;
    }
}

.musicinfo-mobile-cover-container {
    justify-content: center;
}

.body-mobile {
    * > img,
    svg {
        user-drag: none;
        -webkit-user-drag: none;
        user-select: none;
        -moz-user-select: none;
        -webkit-user-select: none;
        -ms-user-select: none;
    }
}

.body-mobile > .context-menu-root {
    > .context-menu-outer {
        background-color: rgba(0, 0, 0, 0.85) !important;
        z-index: 1005;
        max-width: unset !important;

        :last-child {
            margin-bottom: 0px;
        }

        :first-child {
            margin-top: 0px;
        }

        > .bottom-sheet-container {
            background-color: var(--secondary) !important;
            > .context-menu-item.context-menu-open {
                background-color: var(--secondary);
                color: var(--textPrimary);
                padding: 10px 15px;
            }
        }
    }
}

.musicinfo-mobile-view-container {
    position: relative;
    height: 100%;

    .queue-container .col-lg-7.col-xl-8.col-5 {
        flex: 0 0 75%;
        max-width: 75%;
    }

    .queue-container .provider-icon {
        margin-left: 15px;
    }

    *::-webkit-scrollbar,
    *::-webkit-scrollbar-thumb {
        width: 0px !important;
        display: none !important;
    }

    *::-webkit-scrollbar-thumb {
        display: none !important;
    }

    *::-webkit-scrollbar-track {
        background: transparent;
    }
}

